--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Yozify",
   "description": "Make the web a bit more magical",
-  "version": "2.0",
+  "version": "3.0",
   "permissions": [
     "activeTab"
   ],
@@ -14,7 +14,8 @@
   },
   "web_accessible_resources": [
     "yoz_sm.png",
-    "dexter_sm.png"
+    "dexter_sm.png",
+    "gilbert_sm.png"
   ],
   "icons": {
   	"16": "yoz16.png",
